// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Base Button Snapshot should render with large size 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--colors-primary);
  border: 0;
  border-color: var(--colors-primary);
  border-radius: var(--borderRadius);
  color: var(--colors-neutral08);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--bodyFont);
  font-size: var(--typeScale-size04-fontSize);
  font-weight: 600;
  height: var(--spaceScale-spacing11);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  line-height: var(--typeScale-size04-lineHeight);
  margin: var(--spaceScale-spacing02);
  min-width: var(--spaceScale-spacing13);
  overflow: hidden;
  padding: var(--spaceScale.-spacing04) var(--spaceScale.-spacing06);
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px dotted var(--colors-focus);
  outline-offset: 3px;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #a8cf2d;
  color: var(--colors-neutral08);
}

.emotion-0:not(:disabled):after {
  background: var(--colors-neutral08);
  border-radius: 50%;
  content: '';
  height: var(--spaceScale-spacing07);
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: var(--spaceScale-spacing07);
}

.emotion-0:not(:disabled):active {
  background: #86a524;
  color: var(--colors-neutral08);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--colors-primary);
  border: 0;
  border-color: var(--colors-primary);
  border-radius: var(--borderRadius);
  color: var(--colors-neutral08);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--bodyFont);
  font-size: var(--typeScale-size04-fontSize);
  font-weight: 600;
  height: var(--spaceScale-spacing11);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  line-height: var(--typeScale-size04-lineHeight);
  margin: var(--spaceScale-spacing02);
  min-width: var(--spaceScale-spacing13);
  overflow: hidden;
  padding: var(--spaceScale.-spacing04) var(--spaceScale.-spacing06);
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px dotted var(--colors-focus);
  outline-offset: 3px;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #a8cf2d;
  color: var(--colors-neutral08);
}

.emotion-0:not(:disabled):after {
  background: var(--colors-neutral08);
  border-radius: 50%;
  content: '';
  height: var(--spaceScale-spacing07);
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: var(--spaceScale-spacing07);
}

.emotion-0:not(:disabled):active {
  background: #86a524;
  color: var(--colors-neutral08);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <button
    class="emotion-0 emotion-1"
    id="testId"
    type="button"
  >
    <span
      class="emotion-2 emotion-3"
    >
      Test Text
    </span>
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with small size 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--colors-primary);
  border: 0;
  border-color: var(--colors-primary);
  border-radius: var(--borderRadius);
  color: var(--colors-neutral08);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--bodyFont);
  font-size: var(--typeScale-size01-fontSize);
  font-weight: 600;
  height: var(--spaceScale-spacing07);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  line-height: var(--typeScale-size01-lineHeight);
  margin: var(--spaceScale-spacing02);
  min-width: 0;
  overflow: hidden;
  padding: var(--spaceScale.-spacing02) var(--spaceScale.-spacing03);
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px dotted var(--colors-focus);
  outline-offset: 3px;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #a8cf2d;
  color: var(--colors-neutral08);
}

.emotion-0:not(:disabled):after {
  background: var(--colors-neutral08);
  border-radius: 50%;
  content: '';
  height: var(--spaceScale-spacing07);
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: var(--spaceScale-spacing07);
}

.emotion-0:not(:disabled):active {
  background: #86a524;
  color: var(--colors-neutral08);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--colors-primary);
  border: 0;
  border-color: var(--colors-primary);
  border-radius: var(--borderRadius);
  color: var(--colors-neutral08);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--bodyFont);
  font-size: var(--typeScale-size01-fontSize);
  font-weight: 600;
  height: var(--spaceScale-spacing07);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  line-height: var(--typeScale-size01-lineHeight);
  margin: var(--spaceScale-spacing02);
  min-width: 0;
  overflow: hidden;
  padding: var(--spaceScale.-spacing02) var(--spaceScale.-spacing03);
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px dotted var(--colors-focus);
  outline-offset: 3px;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #a8cf2d;
  color: var(--colors-neutral08);
}

.emotion-0:not(:disabled):after {
  background: var(--colors-neutral08);
  border-radius: 50%;
  content: '';
  height: var(--spaceScale-spacing07);
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: var(--spaceScale-spacing07);
}

.emotion-0:not(:disabled):active {
  background: #86a524;
  color: var(--colors-neutral08);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <button
    class="emotion-0 emotion-1"
    id="testId"
    type="button"
  >
    <span
      class="emotion-2 emotion-3"
    >
      Test Text
    </span>
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated color 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--colors-neutral08);
  border: 2px solid;
  border-color: var(--colors-neutral05);
  border-radius: var(--borderRadius);
  color: var(--colors-neutral);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--bodyFont);
  font-size: var(--typeScale-size03-fontSize);
  font-weight: 600;
  height: var(--spaceScale-spacing09);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  line-height: var(--typeScale-size03-lineHeight);
  margin: var(--spaceScale-spacing02);
  min-width: var(--spaceScale-spacing13);
  overflow: hidden;
  padding: var(--spaceScale.-spacing04) var(--spaceScale.-spacing05);
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px dotted var(--colors-focus);
  outline-offset: 3px;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #a8cf2d;
  color: var(--colors-neutral);
}

.emotion-0:not(:disabled):after {
  background: var(--colors-neutral);
  border-radius: 50%;
  content: '';
  height: var(--spaceScale-spacing07);
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: var(--spaceScale-spacing07);
}

.emotion-0:not(:disabled):active {
  background: #86a524;
  color: var(--colors-neutral);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--colors-neutral08);
  border: 2px solid;
  border-color: var(--colors-neutral05);
  border-radius: var(--borderRadius);
  color: var(--colors-neutral);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--bodyFont);
  font-size: var(--typeScale-size03-fontSize);
  font-weight: 600;
  height: var(--spaceScale-spacing09);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  line-height: var(--typeScale-size03-lineHeight);
  margin: var(--spaceScale-spacing02);
  min-width: var(--spaceScale-spacing13);
  overflow: hidden;
  padding: var(--spaceScale.-spacing04) var(--spaceScale.-spacing05);
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px dotted var(--colors-focus);
  outline-offset: 3px;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #a8cf2d;
  color: var(--colors-neutral);
}

.emotion-0:not(:disabled):after {
  background: var(--colors-neutral);
  border-radius: 50%;
  content: '';
  height: var(--spaceScale-spacing07);
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: var(--spaceScale-spacing07);
}

.emotion-0:not(:disabled):active {
  background: #86a524;
  color: var(--colors-neutral);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <button
    class="emotion-0 emotion-1"
    color="secondary"
    id="testId"
    type="button"
  >
    <span
      class="emotion-2 emotion-3"
    >
      Test Text
    </span>
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated shape 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--colors-primary);
  border: 0;
  border-color: var(--colors-primary);
  border-radius: 100%;
  color: var(--colors-neutral08);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--bodyFont);
  font-size: var(--typeScale-size03-fontSize);
  font-weight: 600;
  height: var(--spaceScale-spacing09);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  line-height: var(--typeScale-size03-lineHeight);
  margin: var(--spaceScale-spacing02);
  min-width: var(--spaceScale-spacing13);
  overflow: hidden;
  padding: var(--spaceScale.-spacing04) var(--spaceScale.-spacing05);
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px dotted var(--colors-focus);
  outline-offset: 3px;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #a8cf2d;
  color: var(--colors-neutral08);
}

.emotion-0:not(:disabled):after {
  background: var(--colors-neutral08);
  border-radius: 50%;
  content: '';
  height: var(--spaceScale-spacing07);
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: var(--spaceScale-spacing07);
}

.emotion-0:not(:disabled):active {
  background: #86a524;
  color: var(--colors-neutral08);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--colors-primary);
  border: 0;
  border-color: var(--colors-primary);
  border-radius: 100%;
  color: var(--colors-neutral08);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--bodyFont);
  font-size: var(--typeScale-size03-fontSize);
  font-weight: 600;
  height: var(--spaceScale-spacing09);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  line-height: var(--typeScale-size03-lineHeight);
  margin: var(--spaceScale-spacing02);
  min-width: var(--spaceScale-spacing13);
  overflow: hidden;
  padding: var(--spaceScale.-spacing04) var(--spaceScale.-spacing05);
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px dotted var(--colors-focus);
  outline-offset: 3px;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #a8cf2d;
  color: var(--colors-neutral08);
}

.emotion-0:not(:disabled):after {
  background: var(--colors-neutral08);
  border-radius: 50%;
  content: '';
  height: var(--spaceScale-spacing07);
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: var(--spaceScale-spacing07);
}

.emotion-0:not(:disabled):active {
  background: #86a524;
  color: var(--colors-neutral08);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <button
    class="emotion-0 emotion-1"
    id="testId"
    shape="round"
    type="button"
  >
    <span
      class="emotion-2 emotion-3"
    >
      Test Text
    </span>
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated textTransform 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--colors-primary);
  border: 0;
  border-color: var(--colors-primary);
  border-radius: var(--borderRadius);
  color: var(--colors-neutral08);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--bodyFont);
  font-size: var(--typeScale-size03-fontSize);
  font-weight: 600;
  height: var(--spaceScale-spacing09);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  line-height: var(--typeScale-size03-lineHeight);
  margin: var(--spaceScale-spacing02);
  min-width: var(--spaceScale-spacing13);
  overflow: hidden;
  padding: var(--spaceScale.-spacing04) var(--spaceScale.-spacing05);
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px dotted var(--colors-focus);
  outline-offset: 3px;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #a8cf2d;
  color: var(--colors-neutral08);
}

.emotion-0:not(:disabled):after {
  background: var(--colors-neutral08);
  border-radius: 50%;
  content: '';
  height: var(--spaceScale-spacing07);
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: var(--spaceScale-spacing07);
}

.emotion-0:not(:disabled):active {
  background: #86a524;
  color: var(--colors-neutral08);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: var(--colors-primary);
  border: 0;
  border-color: var(--colors-primary);
  border-radius: var(--borderRadius);
  color: var(--colors-neutral08);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--bodyFont);
  font-size: var(--typeScale-size03-fontSize);
  font-weight: 600;
  height: var(--spaceScale-spacing09);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  line-height: var(--typeScale-size03-lineHeight);
  margin: var(--spaceScale-spacing02);
  min-width: var(--spaceScale-spacing13);
  overflow: hidden;
  padding: var(--spaceScale.-spacing04) var(--spaceScale.-spacing05);
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px dotted var(--colors-focus);
  outline-offset: 3px;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #a8cf2d;
  color: var(--colors-neutral08);
}

.emotion-0:not(:disabled):after {
  background: var(--colors-neutral08);
  border-radius: 50%;
  content: '';
  height: var(--spaceScale-spacing07);
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: var(--spaceScale-spacing07);
}

.emotion-0:not(:disabled):active {
  background: #86a524;
  color: var(--colors-neutral08);
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <button
    class="emotion-0 emotion-1"
    id="testId"
    type="button"
  >
    <span
      class="emotion-2 emotion-3"
    >
      Test Text
    </span>
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated variant 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(0,0,0,0);
  border: 2px solid;
  border-radius: var(--borderRadius);
  color: var(--colors-primary);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--bodyFont);
  font-size: var(--typeScale-size03-fontSize);
  font-weight: 600;
  height: var(--spaceScale-spacing09);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  line-height: var(--typeScale-size03-lineHeight);
  margin: var(--spaceScale-spacing02);
  min-width: var(--spaceScale-spacing13);
  overflow: hidden;
  padding: var(--spaceScale.-spacing04) var(--spaceScale.-spacing05);
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px dotted var(--colors-focus);
  outline-offset: 3px;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #f8fbee;
  color: #a8cf2d;
}

.emotion-0:not(:disabled):after {
  background: var(--colors-primary);
  border-radius: 50%;
  content: '';
  height: var(--spaceScale-spacing07);
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: var(--spaceScale-spacing07);
}

.emotion-0:not(:disabled):active {
  background: #eaf3cc;
  color: #86a524;
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(0,0,0,0);
  border: 2px solid;
  border-radius: var(--borderRadius);
  color: var(--colors-primary);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-family: var(--bodyFont);
  font-size: var(--typeScale-size03-fontSize);
  font-weight: 600;
  height: var(--spaceScale-spacing09);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  line-height: var(--typeScale-size03-lineHeight);
  margin: var(--spaceScale-spacing02);
  min-width: var(--spaceScale-spacing13);
  overflow: hidden;
  padding: var(--spaceScale.-spacing04) var(--spaceScale.-spacing05);
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  touch-action: manipulation;
  -webkit-transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  transition: background 0.35s,border-color 0.35s,box-shadow 0.35s,color 0.35s;
  vertical-align: middle;
  white-space: nowrap;
  width: auto;
}

.emotion-0:not(:disabled):focus {
  outline: 2px dotted var(--colors-focus);
  outline-offset: 3px;
}

.emotion-0:not(:disabled):hover,
.emotion-0:not(:disabled):focus {
  background: #f8fbee;
  color: #a8cf2d;
}

.emotion-0:not(:disabled):after {
  background: var(--colors-primary);
  border-radius: 50%;
  content: '';
  height: var(--spaceScale-spacing07);
  left: 50%;
  opacity: 0;
  padding: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%, -50%) scale(1);
  -moz-transform: translate(-50%, -50%) scale(1);
  -ms-transform: translate(-50%, -50%) scale(1);
  transform: translate(-50%, -50%) scale(1);
  -webkit-transition: opacity 1s,-webkit-transform 0.5s;
  transition: opacity 1s,transform 0.5s;
  width: var(--spaceScale-spacing07);
}

.emotion-0:not(:disabled):active {
  background: #eaf3cc;
  color: #86a524;
}

.emotion-0:not(:disabled):active:after {
  opacity: 0.4;
  -webkit-transform: translate(-50%, -50%) scale(0);
  -moz-transform: translate(-50%, -50%) scale(0);
  -ms-transform: translate(-50%, -50%) scale(0);
  transform: translate(-50%, -50%) scale(0);
  -webkit-transition: -webkit-transform 0s;
  transition: transform 0s;
}

.emotion-0 svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  visibility: visible;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <button
    class="emotion-0 emotion-1"
    id="testId"
    type="button"
  >
    <span
      class="emotion-2 emotion-3"
    >
      Test Text
    </span>
  </button>
</div>
`;
